# Public-FotMob-API

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  SPONSOR.md  docker-compose.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: missing_endpoint.md
.github/workflows/: ci.yml
docs/endpoints/: audio_data.md  leagues.md  matches.md  news_transfers.md  players.md  search.md  system_mobile.md  teams.md  tv_listings.md
fotmob_service/: README.md  conftest.py  pyproject.toml
fotmob_service/apps/core/: apps.py  exceptions.py  middleware.py  views.py
fotmob_service/apps/fotmob/: __init__.py  urls.py  views.py
fotmob_service/clients/: __init__.py  fotmob_client.py
fotmob_service/config/: __init__.py  urls.py  wsgi.py
fotmob_service/config/settings/: __init__.py  base.py  local.py  test.py
